src/grammarparsing/GrammarParser.java
// Generated from C:/Users/Computer/IdeaProjects/ParserGenerator/src/grammarparsing\Grammar.g4 by ANTLR 4.7.2
package grammarparsing;

import java.util.LinkedList;
import java.util.Collections;
import grammar.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, WHITESPACE=13, EPS=14, HEADER=15, IGNORE=16, 
		TOKENS=17, RULES=18, START=19, IDENTIFIER=20, CODE=21, REGEX=22;
	public static final int
		RULE_grammarDescription = 0, RULE_header = 1, RULE_parserRules = 2, RULE_singleRule = 3, 
		RULE_argumentList = 4, RULE_varible = 5, RULE_optionsList = 6, RULE_argumentListTail = 7, 
		RULE_ruleOption = 8, RULE_ruleAtomList = 9, RULE_ruleAtom = 10, RULE_terminal = 11, 
		RULE_nonTerminal = 12, RULE_paramList = 13, RULE_paramListTail = 14, RULE_alternativeListTail = 15, 
		RULE_lexerInfo = 16, RULE_singleToken = 17, RULE_skipWS = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"grammarDescription", "header", "parserRules", "singleRule", "argumentList", 
			"varible", "optionsList", "argumentListTail", "ruleOption", "ruleAtomList", 
			"ruleAtom", "terminal", "nonTerminal", "paramList", "paramListTail", 
			"alternativeListTail", "lexerInfo", "singleToken", "skipWS"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'returns'", "'['", "']'", "':'", "';'", "','", "'='", 
			"'|'", "'->'", "'skip'", null, "'EPS'", "'header'", "'ignore'", "'tokens'", 
			"'rules'", "'start'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "WHITESPACE", "EPS", "HEADER", "IGNORE", "TOKENS", "RULES", "START", 
			"IDENTIFIER", "CODE", "REGEX"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class GrammarDescriptionContext extends ParserRuleContext {
		public Grammar descr;
		public HeaderContext h;
		public ParserRulesContext p;
		public SkipWSContext s;
		public LexerInfoContext lI;
		public HeaderContext header() {
			return getRuleContext(HeaderContext.class,0);
		}
		public ParserRulesContext parserRules() {
			return getRuleContext(ParserRulesContext.class,0);
		}
		public SkipWSContext skipWS() {
			return getRuleContext(SkipWSContext.class,0);
		}
		public LexerInfoContext lexerInfo() {
			return getRuleContext(LexerInfoContext.class,0);
		}
		public GrammarDescriptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_grammarDescription; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterGrammarDescription(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitGrammarDescription(this);
		}
	}

	public final GrammarDescriptionContext grammarDescription() throws RecognitionException {
		GrammarDescriptionContext _localctx = new GrammarDescriptionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_grammarDescription);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			((GrammarDescriptionContext)_localctx).h = header();
			setState(39);
			((GrammarDescriptionContext)_localctx).p = parserRules();
			setState(40);
			((GrammarDescriptionContext)_localctx).s = skipWS();
			setState(41);
			((GrammarDescriptionContext)_localctx).lI = lexerInfo();
			((GrammarDescriptionContext)_localctx).descr =  new Grammar(((GrammarDescriptionContext)_localctx).h.headerResult, ((GrammarDescriptionContext)_localctx).p.parserRulesList, ((GrammarDescriptionContext)_localctx).s.skipRegex, ((GrammarDescriptionContext)_localctx).lI.tokenRules);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeaderContext extends ParserRuleContext {
		public String headerResult;
		public Token h;
		public TerminalNode HEADER() { return getToken(GrammarParser.HEADER, 0); }
		public TerminalNode CODE() { return getToken(GrammarParser.CODE, 0); }
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitHeader(this);
		}
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_header);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			match(HEADER);
			setState(45);
			((HeaderContext)_localctx).h = match(CODE);
			((HeaderContext)_localctx).headerResult =  (((HeaderContext)_localctx).h!=null?((HeaderContext)_localctx).h.getText():null);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParserRulesContext extends ParserRuleContext {
		public List<ParserRule> parserRulesList;
		public SingleRuleContext head;
		public ParserRulesContext tail;
		public SingleRuleContext singleRule() {
			return getRuleContext(SingleRuleContext.class,0);
		}
		public ParserRulesContext parserRules() {
			return getRuleContext(ParserRulesContext.class,0);
		}
		public ParserRulesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parserRules; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterParserRules(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitParserRules(this);
		}
	}

	public final ParserRulesContext parserRules() throws RecognitionException {
		ParserRulesContext _localctx = new ParserRulesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_parserRules);
		try {
			setState(53);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(48);
				((ParserRulesContext)_localctx).head = singleRule();
				setState(49);
				((ParserRulesContext)_localctx).tail = parserRules();
				((ParserRulesContext)_localctx).parserRulesList =  ((ParserRulesContext)_localctx).tail.parserRulesList; _localctx.parserRulesList.add(0, ((ParserRulesContext)_localctx).head.rule);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				((ParserRulesContext)_localctx).parserRulesList =  new LinkedList<ParserRule>();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SingleRuleContext extends ParserRuleContext {
		public ParserRule rule;
		public Token name;
		public ArgumentListContext args;
		public VaribleContext ret;
		public OptionsListContext alts;
		public TerminalNode IDENTIFIER() { return getToken(GrammarParser.IDENTIFIER, 0); }
		public ArgumentListContext argumentList() {
			return getRuleContext(ArgumentListContext.class,0);
		}
		public VaribleContext varible() {
			return getRuleContext(VaribleContext.class,0);
		}
		public OptionsListContext optionsList() {
			return getRuleContext(OptionsListContext.class,0);
		}
		public SingleRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_singleRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterSingleRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitSingleRule(this);
		}
	}

	public final SingleRuleContext singleRule() throws RecognitionException {
		SingleRuleContext _localctx = new SingleRuleContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_singleRule);
		try {
			setState(78);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(55);
				((SingleRuleContext)_localctx).name = match(IDENTIFIER);
				setState(56);
				match(T__0);
				setState(57);
				((SingleRuleContext)_localctx).args = argumentList();
				setState(58);
				match(T__1);
				setState(59);
				match(T__2);
				setState(60);
				match(T__3);
				setState(61);
				((SingleRuleContext)_localctx).ret = varible();
				setState(62);
				match(T__4);
				setState(63);
				match(T__5);
				setState(64);
				((SingleRuleContext)_localctx).alts = optionsList();
				setState(65);
				match(T__6);
				((SingleRuleContext)_localctx).rule =  new ParserRule((((SingleRuleContext)_localctx).name!=null?((SingleRuleContext)_localctx).name.getText():null), ((SingleRuleContext)_localctx).args.args, ((SingleRuleContext)_localctx).ret.var, ((SingleRuleContext)_localctx).alts.alts);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(68);
				((SingleRuleContext)_localctx).name = match(IDENTIFIER);
				setState(69);
				match(T__2);
				setState(70);
				match(T__3);
				setState(71);
				((SingleRuleContext)_localctx).ret = varible();
				setState(72);
				match(T__4);
				setState(73);
				match(T__5);
				setState(74);
				((SingleRuleContext)_localctx).alts = optionsList();
				setState(75);
				match(T__6);
				((SingleRuleContext)_localctx).rule =  new ParserRule((((SingleRuleContext)_localctx).name!=null?((SingleRuleContext)_localctx).name.getText():null), Collections.EMPTY_LIST, ((SingleRuleContext)_localctx).ret.var, ((SingleRuleContext)_localctx).alts.alts);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgumentListContext extends ParserRuleContext {
		public List<Variable> args;
		public VaribleContext head;
		public ArgumentListTailContext tail;
		public VaribleContext varible() {
			return getRuleContext(VaribleContext.class,0);
		}
		public ArgumentListTailContext argumentListTail() {
			return getRuleContext(ArgumentListTailContext.class,0);
		}
		public ArgumentListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argumentList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterArgumentList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitArgumentList(this);
		}
	}

	public final ArgumentListContext argumentList() throws RecognitionException {
		ArgumentListContext _localctx = new ArgumentListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_argumentList);
		try {
			setState(85);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(80);
				((ArgumentListContext)_localctx).head = varible();
				setState(81);
				((ArgumentListContext)_localctx).tail = argumentListTail();
				((ArgumentListContext)_localctx).args =  ((ArgumentListContext)_localctx).tail.args; _localctx.args.add(0, ((ArgumentListContext)_localctx).head.var);
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 2);
				{
				 ((ArgumentListContext)_localctx).args =  new LinkedList<Variable>(); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VaribleContext extends ParserRuleContext {
		public Variable var;
		public Token type;
		public Token name;
		public List<TerminalNode> IDENTIFIER() { return getTokens(GrammarParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(GrammarParser.IDENTIFIER, i);
		}
		public VaribleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varible; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterVarible(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitVarible(this);
		}
	}

	public final VaribleContext varible() throws RecognitionException {
		VaribleContext _localctx = new VaribleContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_varible);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			((VaribleContext)_localctx).type = match(IDENTIFIER);
			setState(88);
			((VaribleContext)_localctx).name = match(IDENTIFIER);
			((VaribleContext)_localctx).var =  new Variable((((VaribleContext)_localctx).type!=null?((VaribleContext)_localctx).type.getText():null), (((VaribleContext)_localctx).name!=null?((VaribleContext)_localctx).name.getText():null));
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OptionsListContext extends ParserRuleContext {
		public List<RuleOption> alts;
		public RuleOptionContext head;
		public AlternativeListTailContext tail;
		public RuleOptionContext ruleOption() {
			return getRuleContext(RuleOptionContext.class,0);
		}
		public AlternativeListTailContext alternativeListTail() {
			return getRuleContext(AlternativeListTailContext.class,0);
		}
		public OptionsListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_optionsList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterOptionsList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitOptionsList(this);
		}
	}

	public final OptionsListContext optionsList() throws RecognitionException {
		OptionsListContext _localctx = new OptionsListContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_optionsList);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			((OptionsListContext)_localctx).head = ruleOption();
			setState(92);
			((OptionsListContext)_localctx).tail = alternativeListTail();
			((OptionsListContext)_localctx).alts =  ((OptionsListContext)_localctx).tail.alts; _localctx.alts.add(0, ((OptionsListContext)_localctx).head.alt);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgumentListTailContext extends ParserRuleContext {
		public List<Variable> args;
		public ArgumentListContext tail;
		public ArgumentListContext argumentList() {
			return getRuleContext(ArgumentListContext.class,0);
		}
		public ArgumentListTailContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argumentListTail; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterArgumentListTail(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitArgumentListTail(this);
		}
	}

	public final ArgumentListTailContext argumentListTail() throws RecognitionException {
		ArgumentListTailContext _localctx = new ArgumentListTailContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_argumentListTail);
		try {
			setState(100);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__7:
				enterOuterAlt(_localctx, 1);
				{
				setState(95);
				match(T__7);
				setState(96);
				((ArgumentListTailContext)_localctx).tail = argumentList();
				((ArgumentListTailContext)_localctx).args =  ((ArgumentListTailContext)_localctx).tail.args;
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 2);
				{
				((ArgumentListTailContext)_localctx).args =  new LinkedList<Variable>();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuleOptionContext extends ParserRuleContext {
		public RuleOption alt;
		public Token init;
		public RuleAtomListContext atoms;
		public RuleAtomListContext ruleAtomList() {
			return getRuleContext(RuleAtomListContext.class,0);
		}
		public TerminalNode CODE() { return getToken(GrammarParser.CODE, 0); }
		public RuleOptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleOption; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterRuleOption(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitRuleOption(this);
		}
	}

	public final RuleOptionContext ruleOption() throws RecognitionException {
		RuleOptionContext _localctx = new RuleOptionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_ruleOption);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CODE) {
				{
				setState(102);
				((RuleOptionContext)_localctx).init = match(CODE);
				}
			}

			setState(105);
			((RuleOptionContext)_localctx).atoms = ruleAtomList();
			((RuleOptionContext)_localctx).alt =  new RuleOption((((RuleOptionContext)_localctx).init!=null?((RuleOptionContext)_localctx).init.getText():null), ((RuleOptionContext)_localctx).atoms.atoms);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuleAtomListContext extends ParserRuleContext {
		public List<RuleAtom> atoms;
		public RuleAtomContext head;
		public RuleAtomListContext tail;
		public RuleAtomContext ruleAtom() {
			return getRuleContext(RuleAtomContext.class,0);
		}
		public RuleAtomListContext ruleAtomList() {
			return getRuleContext(RuleAtomListContext.class,0);
		}
		public RuleAtomListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleAtomList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterRuleAtomList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitRuleAtomList(this);
		}
	}

	public final RuleAtomListContext ruleAtomList() throws RecognitionException {
		RuleAtomListContext _localctx = new RuleAtomListContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_ruleAtomList);
		try {
			setState(113);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(108);
				((RuleAtomListContext)_localctx).head = ruleAtom();
				setState(109);
				((RuleAtomListContext)_localctx).tail = ruleAtomList();
				((RuleAtomListContext)_localctx).atoms =  ((RuleAtomListContext)_localctx).tail.atoms; _localctx.atoms.add(0, ((RuleAtomListContext)_localctx).head.atom);
				}
				break;
			case T__6:
			case T__9:
				enterOuterAlt(_localctx, 2);
				{
				((RuleAtomListContext)_localctx).atoms =  new LinkedList<RuleAtom>();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuleAtomContext extends ParserRuleContext {
		public RuleAtom atom;
		public TerminalContext resT;
		public NonTerminalContext resN;
		public TerminalContext terminal() {
			return getRuleContext(TerminalContext.class,0);
		}
		public NonTerminalContext nonTerminal() {
			return getRuleContext(NonTerminalContext.class,0);
		}
		public RuleAtomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleAtom; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterRuleAtom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitRuleAtom(this);
		}
	}

	public final RuleAtomContext ruleAtom() throws RecognitionException {
		RuleAtomContext _localctx = new RuleAtomContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_ruleAtom);
		try {
			setState(121);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(115);
				((RuleAtomContext)_localctx).resT = terminal();
				((RuleAtomContext)_localctx).atom =  ((RuleAtomContext)_localctx).resT.atom;
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(118);
				((RuleAtomContext)_localctx).resN = nonTerminal();
				((RuleAtomContext)_localctx).atom =  ((RuleAtomContext)_localctx).resN.atom;
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TerminalContext extends ParserRuleContext {
		public RuleAtom atom;
		public Token id;
		public Token code;
		public Token var;
		public List<TerminalNode> IDENTIFIER() { return getTokens(GrammarParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(GrammarParser.IDENTIFIER, i);
		}
		public TerminalNode CODE() { return getToken(GrammarParser.CODE, 0); }
		public TerminalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_terminal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterTerminal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitTerminal(this);
		}
	}

	public final TerminalContext terminal() throws RecognitionException {
		TerminalContext _localctx = new TerminalContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_terminal);
		int _la;
		try {
			setState(135);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(123);
				((TerminalContext)_localctx).id = match(IDENTIFIER);
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==CODE) {
					{
					setState(124);
					((TerminalContext)_localctx).code = match(CODE);
					}
				}

				((TerminalContext)_localctx).atom =  new Terminal(null, (((TerminalContext)_localctx).id!=null?((TerminalContext)_localctx).id.getText():null), (((TerminalContext)_localctx).code!=null?((TerminalContext)_localctx).code.getText():null));
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(128);
				((TerminalContext)_localctx).var = match(IDENTIFIER);
				setState(129);
				match(T__8);
				setState(130);
				((TerminalContext)_localctx).id = match(IDENTIFIER);
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==CODE) {
					{
					setState(131);
					((TerminalContext)_localctx).code = match(CODE);
					}
				}

				((TerminalContext)_localctx).atom =  new Terminal((((TerminalContext)_localctx).var!=null?((TerminalContext)_localctx).var.getText():null), (((TerminalContext)_localctx).id!=null?((TerminalContext)_localctx).id.getText():null), (((TerminalContext)_localctx).code!=null?((TerminalContext)_localctx).code.getText():null));
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NonTerminalContext extends ParserRuleContext {
		public RuleAtom atom;
		public Token var;
		public Token id;
		public ParamListContext params;
		public Token code;
		public List<TerminalNode> IDENTIFIER() { return getTokens(GrammarParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(GrammarParser.IDENTIFIER, i);
		}
		public ParamListContext paramList() {
			return getRuleContext(ParamListContext.class,0);
		}
		public TerminalNode CODE() { return getToken(GrammarParser.CODE, 0); }
		public NonTerminalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nonTerminal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterNonTerminal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitNonTerminal(this);
		}
	}
